<resources>
    <string name="app_name">Russia TV &amp; Radio</string>
    <string name="russia_tv_radio">Russia TV and Radio</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="policy_terms">Policy/Terms</string>
    <string name="more_apps">More Apps</string>
    <string name="rate_us">RATE US!</string>
    <string name="report">Report</string>
    <string name="live_tv_channels">Live TV Channels</string>
    <string name="live_radio">Live Radio</string>
    <string name="application_language">Application Language</string>
    <string name="button_help_text">Button Help Text</string>
    <string name="my_sleep_timer">My Sleep Timer</string>
    <string name="my_time_zone">My Time Zone</string>
    <string name="my_current_time">My Current Time</string>
    <string name="time_format">Time Format</string>
    <string name="save_changes">SAVE CHANGES</string>

    <string name="app_ad_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ad_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_interst_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="fb_ad_id" translatable="false">CAROUSEL_IMG_SQUARE_APP_INSTALL#549167759165615_551513495597708</string>

</resources>