<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    tools:context=".BottomSheetDialog">

    <TextView
        android:id="@+id/title_lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Language"
        android:visibility="gone"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/title_main"
        android:layout_below="@+id/title_lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/russia_tv_radio"
        android:textColor="@color/green"
        android:gravity="center"
        android:visibility="gone"
        android:layout_margin="10dp"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_main"
        android:background="@drawable/shape_appclr4"
        android:orientation="vertical">

        <View
            android:layout_width="150dp"
            android:layout_height="3dp"
            android:background="@drawable/shape_blue"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_fav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_weight="1"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/cardClr"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/text_fav"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="5dp"
                    android:drawableLeft="@drawable/ic_baseline_favorite_24"
                    android:text="@string/favorites"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_weight="1"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/cardClr"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/text_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="5dp"
                    android:drawableTint="@color/green"
                    android:drawableLeft="@drawable/ic_baseline_settings_24"
                    android:text="@string/settings"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_weight="1"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/cardClr"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/text_help"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="5dp"
                    android:drawableTint="@color/green"
                    android:drawableLeft="@drawable/ic_baseline_help_outline_24"
                    android:text="@string/help"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_weight="1"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/cardClr"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/text_term"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="5dp"
                    android:drawableTint="@color/green"
                    android:drawableLeft="@drawable/ic_baseline_feedback_24"
                    android:text="@string/policy_terms"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_weight="1"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/cardClr"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/text_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="5dp"
                    android:drawableTint="@color/green"
                    android:drawableLeft="@drawable/ic_baseline_star_rate_24"
                    android:text="@string/rate_us"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_weight="1"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/cardClr"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/text_report"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="5dp"
                    android:drawableTint="@color/green"
                    android:drawableLeft="@drawable/ic_baseline_report_24"
                    android:text="@string/report"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>